--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -4,7 +4,7 @@ phases:
   build:
     commands:
       
-      - git clone https://github.com/captain-omkar/manifest.git@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 manifest
+      - git clone https://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@github.com/captain-omkar/manifest.git manifest
       - cd manifest
       - ls
       
