--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,6 +8,8 @@ phases:
       - cd loco-manifest
       - echo "Hello, world!" > hello.txt
       - ls
+      - git config --global user.email "omkarchavanbldea@gmail.com"
+      - git config --global user.name "captain-omkar"
       - git add .
       - git commit -m "addedd"
       - git push
